

2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

11-Jun-2010 Christophe Demko
 # Fixed issue [#20968] Fix Category Parameters in Featured Menu Item (Mark Dexter, bill richardson)
 # Fixed issues in the component installer and in com_alpha component

11-Jun-2010 Jean-Marie Simonet
# [#20489] JTableAsset::store failed. Thanks Christophe.
# [#20962] [files and patch] Hathor error page. Thanks Andrea.
# Corrected code duplication in hathor modal.php
# [#20965] When in: Article Manager: Articles, Select language select does not work. Thanks Bill.

10-Jun-2010 Christophe Demko
 # Fixed issue [#20952] Joomla does not load template language file when an error is detected

10-Jun-2010 Jean-Marie Simonet
# [#20791] settings not saved on first step of installer. Thanks Rune.
# [#20914] getOptions at category.php. Thanks Andrew.
$ Added missing string
$ Changed string in banner/tracks toolbar

09-Jun-2010 Sam Moffatt
 # Fixed bug where updates from deleted update sites were visible after extension uninstall
 + Added convenience to adapter layer to pass through properties to instances in a uniform manner

09-Jun-2010 Christophe Demko
 # Fixed issue [#20938] [patch] Missing </ul> in layout override (Andrea Tarr)

09-Jun-2010 Jean-Marie Simonet
# [#20913] Minimum PHP version check in installer. Fixed for php.5.2.4
# [#20939] textual error in article manager config page. Thanks Troy.
# [#20570] archived articles - title linkable. Thanks Christophe.
# [#20940] email validation creating user account gives bad error message. Thanks Bill and Rob.
$ Adding missing string.
# [#20854] Adding article from filtered Category. Thanks Phil.

09-Jun-2010 Andrew Eddie