@@ -19,16 +19,15 @@ defined('_JEXEC') or die;
 			<th>
 				<?php echo JText::_('COM_MENUS_HEADING_DISPLAY');?>
 			</th>
-			<th>
-				&nbsp;
-			</th>
 		</tr>
 		</thead>
 		<tbody>
 		<?php foreach ($this->modules as $i => &$module) : ?>
 			<tr class="row<?php echo $i % 2;?>">
 				<td>
-					<?php echo JText::sprintf('COM_MENUS_ITEM_MODULE_ACCESS_POSITION', $this->escape($module->title), $this->escape($module->access_title), $this->escape($module->position)); ?>
+					<?php $link = 'index.php?option=com_modules&client_id=0&task=module.edit&id='. $module->id.'&tmpl=component&view=module&layout=modal' ; ?>
+					<a class="modal" href="<?php echo $link;?>" rel="{handler: 'iframe', size: {x: 1024, y: 450}}" title="<?php echo JText::_('COM_MENUS_EDIT_MODULE_SETTINGS');?>">
+						<?php echo JText::sprintf('COM_MENUS_MODULE_ACCESS_POSITION', $this->escape($module->title), $this->escape($module->access_title), $this->escape($module->position)); ?></a>
 				</td>
 				<td class="center">
 				<?php if (is_null($module->menuid)) : ?>
@@ -38,11 +37,6 @@ defined('_JEXEC') or die;
 				<?php else : ?>
 					<?php echo JText::_('JALL'); ?>
 				<?php endif; ?>
-				</td>
-				<td class="center">
-					<?php $link = 'index.php?option=com_modules&client_id=0&task=module.edit&id='. $module->id.'&tmpl=component&view=module&layout=modal' ; ?>
-					<a class="modal" href="<?php echo $link;?>" rel="{handler: 'iframe', size: {x: 800, y: 450}}">
-						<?php echo JText::_('COM_MENUS_EDIT_MODULE_SETTINGS');?></a>
 				</td>
 			</tr>
 		<?php endforeach; ?>
